# aws-syndicate

./: .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-changes.md  feature_request.md  functionality-improvement.md
.github/workflows/: build-and-check-python-package.yml  ci-java.yml  maven.yml  pypi-package.yml
PROJECTS/sdct-auto-test/: deployment_resources.json
aws_connection/: __init__.py  api_gateway_connection.py  application_autoscaling_connection.py  cloud_watch_connection.py  cloudfront_connection.py  cognito_identity_connection.py  dynamo_connection.py  ec2_connection.py  elastic_beanstalk_connection.py  extended_api_gateway_connection.py  helper.py  iam_connection.py  kinesis_connection.py  kms_connection.py  lambda_connection.py  s3_connection.py  ses_connection.py  sns_connection.py  sqs_connection.py  ssm_connection.py  step_functions_connection.py  sts_connection.py
content/: abstract_lambda  log_helper
core/: __init__.py  helper.py  syndicate.py
core/conf/: config_holder.py
core/resources/: __init__.py  alarm_resource.py  api_gateway_resource.py  cloud_watch_resource.py  cognito_resource.py  dynamo_db_resource.py  ebs_resource.py  ec2_resource.py  helper.py  iam_resource.py  kinesis_resource.py  lambda_resource.py  s3_resource.py  sns_resource.py  (+2 more)
docs/: wiki_syndicate.yml.md
examples/: deployment_policy.json  user_policy.json
plugin/: pom.xml
syndicate/: __init__.py  exceptions.py
tests/: CHANGELOG.md  README.md  happy_path.py  test_building_meta.py
(+730 files in other folders)
